<resources>
    <string name="app_name">INGV Finite Source</string>
    <string name="global_list_item_depth" translatable="false">%s km</string>
    <string name="global_list_item_magnitude" translatable="false">%s</string>
    <string name="event_details_title">Event details</string>
    <string name="searchbar_hint">Search here</string>
    <string name="legend_title">Legend</string>
    <string name="legend_description">The color represent the availability of modeled sources from InSAR data for the event.</string>
    <string name="legend_has_finite_source">At least one modeled source is available.</string>
    <string name="legend_has_no_finite_source">No modeled source models are available.</string>
    <string name="slip_palette_max_depth" translatable="false">%s m</string>
    <string name="slip_palette_min_depth" translatable="false">0.0 m</string>
    <string name="finite_source_tab_name">Finite Source</string>
    <string name="scenarios_tab_name">Scenarios</string>
    <string name="footprints_tab_name">Footprints</string>
    <string name="finite_source_not_available">No modeled source models are available</string>
    <string name="scenarios_not_available">Scenarios not available</string>
    <string name="footprints_not_available">Footprints not available</string>
    <string name="event_error">Error while downloading the event details</string>
    <string name="download_zip_button_text">Copy data_and_model.zip URL</string>
    <string name="download_completed">URL copied to clipboard</string>
    <string name="download_failed">Error copying URL to clipboard</string>
    <string name="full_screen_image_transition_name" translatable="false">full_screen_image_transistion</string>
    <string name="share_event">Share event</string>
    <string name="see_online">See on the INGV website</string>
    <string name="no_ingv_url">INGV link not available</string>
    <string name="share_event_format">Earthquake: %s%nMagnitude: %.1f%nDate: %s%nDepth: %.1f km%nINGV URL: %s</string>
    <string name="share_image">Share image</string>
    <string name="save_image">Save image</string>
    <string name="image_saved">Image saved in the gallery</string>
    <string name="download_global_json_error">Error while retrieving the events</string>
    <string name="retry">Retry</string>
    <string name="info_item_title">Information</string>
    <string name="what_is_new">Catalog updates</string>
    <string name="more_info">Tell me more</string>
    <string name="ignore">OK, back to the app</string>
    <plurals name="new_earthquakes">
        <item quantity="one">New earthquakes: %d</item>
        <item quantity="other">New earthquakes: %d</item>
    </plurals>
    <plurals name="new_products">
        <item quantity="one">Finite source added: %d</item>
        <item quantity="other">Finite source added: %d</item>
    </plurals>
    <plurals name="updated_finite_source">
        <item quantity="one">Finite source updated: %d</item>
        <item quantity="other">Finite source updated: %d</item>
    </plurals>
    <string name="updates_info_title">Last catalog updates</string>
    <string name="updated_finite_source_earthquakes_title">Updated the finite source of:</string>
    <string name="new_finite_source_earthquakes_title">Added the finite source to:</string>
    <string name="new_earthquakes_title">New earthquakes added:</string>
    <string name="catalog_updates_title">Catalog updates</string>
    <string name="no_updates">There are no catalog updates</string>
    <string name="info_activity_title">Information</string>
    <string name="catalog_info_text">The INGV finite soruce catalog is a set international earthquakes for which some information are made accessible or something</string>
    <string name="catalog_info_title">The INGV catalog</string>
    <string name="visit_website">Visit website</string>
    <string name="application_info_title">App info</string>
    <string name="application_info_text">The application source code has been made open source on github</string>
    <string name="open_on_github">Open on GitHub</string>
    <string name="version_format" translatable="false">"%1$s v%2$s"</string>
    <string name="finite_source">Finite Source</string>
</resources>