<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.InfoActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/back_icon"
        app:navigationIconTint="?android:attr/textColor"
        app:title="@string/info_activity_title"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/catalog_info_title"
            style="@style/TitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/catalog_info_title"
            android:textAlignment="textStart"
            android:paddingBottom="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/catalog_info_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/catalog_info_text"
            android:textAlignment="textStart"
            app:layout_constraintTop_toBottomOf="@+id/catalog_info_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingBottom="8dp"/>

        <Button
            android:id="@+id/visit_website_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary"
            android:text="@string/visit_website"
            android:textColor="?android:attr/textColor"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/catalog_info_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/application_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            style="@style/TitleTextStyle"
            android:text="@string/application_info_title"
            app:layout_constraintTop_toBottomOf="@+id/visit_website_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/application_info_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/application_info_text"
            android:textAlignment="textStart"
            app:layout_constraintTop_toBottomOf="@+id/application_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingBottom="8dp"/>

        <Button
            android:id="@+id/open_on_github_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary"
            android:text="@string/open_on_github"
            android:textColor="?android:attr/textColor"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/application_info_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/version_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            style="@style/SubtitleTextStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>