<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/legend_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/legend_title"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/legend_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/legend_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/legend_title" />

    <RelativeLayout
        android:id="@+id/legend_finite_source_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/legend_description">

        <ImageView
            android:id="@+id/legend_finite_source_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:src="@drawable/event_circle_icon" />

        <TextView
            android:id="@+id/legend_finite_source_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/legend_finite_source_icon"
            android:text="@string/legend_has_finite_source" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/legend_finite_source_container">

        <ImageView
            android:id="@+id/legend_no_finite_source_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:src="@drawable/event_circle_icon" />

        <TextView
            android:id="@+id/legend_no_finite_source_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/legend_no_finite_source_icon"
            android:text="@string/legend_has_no_finite_source" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>