<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary"
        android:theme="@style/ToolbarMenuTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/back_icon"
        app:title="@string/catalog_updates_title" />

    <TextView
        android:id="@+id/no_updates_text"
        style="@style/TitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/no_updates"
        android:textAlignment="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:flexWrap="wrap"
            app:justifyContent="center">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/new_earthquakes_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/scenarios_item_background"
                android:padding="8dp"
                app:layout_maxWidth="@dimen/updates_max_width">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/new_earthquakes_item_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/new_earthquakes_item_title"
                        style="@style/TitleTextStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/new_earthquakes_title"
                        android:textColor="@color/on_primary"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/new_earthquakes_item_expand_button"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/new_earthquakes_item_expand_button"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:rotation="180"
                        android:src="@drawable/down_icon"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/on_primary" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/new_earthquakes_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    app:layout_constraintTop_toBottomOf="@id/new_earthquakes_item_header" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/new_finite_source_earthquakes_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/scenarios_item_background"
                android:padding="8dp"
                app:layout_maxWidth="@dimen/updates_max_width">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/new_finite_source_earthquakes_item_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/new_finite_source_earthquakes_item_title"
                        style="@style/TitleTextStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/new_finite_source_earthquakes_title"
                        android:textColor="@color/on_primary"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/new_finite_source_earthquakes_item_expand_button"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/new_finite_source_earthquakes_item_expand_button"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:rotation="180"
                        android:src="@drawable/down_icon"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/on_primary" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/new_finite_source_earthquakes_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    app:layout_constraintTop_toBottomOf="@id/new_finite_source_earthquakes_item_header" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/updated_finite_source_earthquakes_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/scenarios_item_background"
                android:padding="8dp"
                app:layout_maxWidth="@dimen/updates_max_width">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/updated_finite_source_item_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/updated_finite_source_item_title"
                        style="@style/TitleTextStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/updated_finite_source_earthquakes_title"
                        android:textColor="@color/on_primary"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/updated_finite_source_item_expand_button"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/updated_finite_source_item_expand_button"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:rotation="180"
                        android:src="@drawable/down_icon"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="?android:attr/textColor" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/updated_finite_source_earthquakes_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    app:layout_constraintTop_toBottomOf="@id/updated_finite_source_item_header" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.flexbox.FlexboxLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>