<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <it.ingv.finitesource.ui.mapview.CustomMapView
            android:id="@+id/custom_map_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <!-- Legend button -->
        <ImageButton
            android:id="@+id/legend_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="16dp"
            android:background="@drawable/legend_button_background"
            android:importantForAccessibility="no"
            android:src="@drawable/question_mark_icon"
            android:translationY="@dimen/map_overlay_margin_top"
            app:layout_anchor="@id/search_bar"
            app:layout_anchorGravity="bottom|end"
            app:tint="@color/on_background" />

        <!-- Compass button -->
        <FrameLayout
            android:id="@+id/compass_button_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="16dp"
            android:translationY="@dimen/map_overlay_margin_top"
            app:layout_anchor="@id/legend_button"
            app:layout_anchorGravity="bottom|end">

            <ImageButton
                android:id="@+id/compass_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/compass_button_background"
                android:importantForAccessibility="no"
                android:scaleType="fitCenter"
                android:src="@drawable/compass_icon" />
        </FrameLayout>

        <!--         Focal Plane Switch -->
        <it.ingv.finitesource.ui.mapoverlays.FocalPlaneSwitch
            android:id="@+id/focal_plane_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:visibility="gone"
            app:layout_anchor="@id/slip_alpha_slider_container"
            app:layout_anchorGravity="bottom|start" />

        <!--         Slip Alpha Slider -->
        <FrameLayout
            android:id="@+id/slip_alpha_slider_container"
            android:layout_width="@dimen/slip_alpha_slider_width"
            android:layout_height="@dimen/slip_alpha_slider_height"
            android:layout_gravity="bottom|end"
            android:translationY="@dimen/map_overlay_margin_top"
            android:visibility="invisible"
            app:layout_anchor="@id/search_bar"
            app:layout_anchorGravity="bottom|start">

            <it.ingv.finitesource.ui.mapoverlays.SlipAlphaSlider
                android:id="@+id/slip_alpha_slider"
                android:layout_width="@dimen/slip_alpha_slider_height"
                android:layout_height="@dimen/slip_alpha_slider_width"
                android:layout_gravity="center"
                android:max="255"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:progressDrawable="@drawable/slip_alpha_slider_progress"
                android:rotation="270"
                android:splitTrack="false"
                android:thumb="@drawable/slip_alpha_slider_thumb"
                android:thumbOffset="0dp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:fitsSystemWindows="true">

            <TextView
                android:id="@+id/osm_contributions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_background"
                android:clickable="true"
                android:focusable="true"
                android:importantForAccessibility="no"
                android:paddingHorizontal="8sp"
                android:paddingTop="2sp"
                android:paddingBottom="4sp"
                android:layout_gravity="bottom|end"
                android:layout_marginBottom="10sp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/on_background"
                android:textSize="12sp"
                android:translationY="@dimen/map_overlay_margin_top"
                app:tint="@color/on_background" />

        </FrameLayout>

        <!-- Search view -->
        <com.google.android.material.search.SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/searchbar_hint"
            app:layout_anchor="@id/search_bar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/search_error_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:padding="16dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/search_error_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/download_global_json_error"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/search_error_retry_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/retry"
                    android:textColor="?android:attr/textColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/search_error_text" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_results"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.search.SearchView>

        <!-- Bottom sheet -->
        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/bottom_sheet_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">
            <!-- Shadow -->
            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:background="@drawable/bottom_sheet_shadow"
                android:translationY="3dp"
                app:layout_anchor="@id/persistent_bottom_sheet"
                app:layout_anchorGravity="top" />

            <it.ingv.finitesource.ui.persistentbottomsheet.PersistentBottomSheetLayout
                android:id="@+id/persistent_bottom_sheet"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/persistent_bottom_sheet_background"
                app:layout_behavior=".ui.persistentbottomsheet.behavior.ViewPagerBottomSheetBehavior" />
        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <!-- Search bar -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/search_bar_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:fitsSystemWindows="true">

            <com.google.android.material.search.SearchBar
                android:id="@+id/search_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/background"
                android:hint="@string/searchbar_hint"
                app:layout_constraintTop_toTopOf="parent"
                app:menu="@menu/navigation_drawer_menu"
                app:navigationIcon="@drawable/search_icon"
                app:strokeColor="@color/stroke_color"
                app:strokeWidth="@dimen/stroke_width" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Tool bar -->
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/tool_bar_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:backgroundTint="@color/background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:navigationIcon="@drawable/down_icon"
                app:navigationIconTint="?attr/colorOnBackground"
                app:title="@string/event_details_title" />
        </com.google.android.material.appbar.AppBarLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:orientation="vertical">

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigation_view"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:theme="@style/NavigationViewTextStyle"
            app:headerLayout="@layout/navigation_drawer_header"
            app:menu="@menu/navigation_items" />

        <LinearLayout
            android:id="@+id/footer_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:orientation="vertical">

            <include layout="@layout/navigation_drawer_footer" />
        </LinearLayout>

    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>
